hphp/test/zend/bad/ext/mbstring/tests/mb_send_mail07.php.skipif
<?php
if (substr(PHP_OS, 0, 3) == 'WIN') {
	die('skip.. Not valid for Windows');
}
if (!function_exists("mb_send_mail") || !mb_language("Korean")) {
	die("skip mb_send_mail() not available");
}
if (!@mb_internal_encoding('ISO-2022-KR')) {
	die("skip ISO-2022-KR encoding is not available on this platform");
}
?>